0.7.1-SNAPSHOT, #106